@@ -1,0 +1,66 @@
+// 
+// Copyright (c) 2006, Kazuki Oikawa
+// All rights reserved.
+//
+// Redistribution and use in source and binary forms, with or without modification,
+// are permitted provided that the following conditions are met:
+//
+// * Redistributions of source code must retain the above copyright notice,
+//   this list of conditions and the following disclaimer.
+// * Redistributions in binary form must reproduce the above copyright notice,
+//   this list of conditions and the following disclaimer in the documentation
+//   and/or other materials provided with the distribution.
+// * Neither the name of the author nor the names of its contributors may be used
+//   to endorse or promote products derived from this software
+//   without specific prior written permission.
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
+// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+#if TEST
+
+using System;
+using System.Threading;
+using NUnit.Framework;
+
+namespace openCrypto.Tests
+{
+	[TestFixture]
+	public class ConfluentWaitHandleTest
+	{
+		[Test]
+		public void TestA ()
+		{
+			ConfluentWaitHandle handle = new ConfluentWaitHandle ();
+			Thread[] list = new Thread[] {
+				new Thread (sleepThread), new Thread (sleepThread)
+			};
+
+			for (int i = 0; i < list.Length; i ++) {
+				handle.StartThread ();
+				list[i].Start (handle);
+			}
+
+			DateTime dt = DateTime.Now;
+			handle.WaitOne ();
+			double t = DateTime.Now.Subtract (dt).TotalSeconds;
+			Assert.IsTrue (t >= 0.8 && t <= 1.2, t.ToString ());
+		}
+
+		void sleepThread (Object o)
+		{
+			ConfluentWaitHandle handle = (ConfluentWaitHandle)o;
+			Thread.Sleep (1000);
+			handle.EndThread ();
+		}
+	}
+}
+#endif
