@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CipherImplementationType.cs" />
     <Compile Include="CipherModePlus.cs" />
+    <Compile Include="Tests\ConfluentWaitHandleTest.cs" />
     <Compile Include="Tests\DummyAlgorithm.cs" />
     <Compile Include="SymmetricAlgorithmPlus.cs" />
     <Compile Include="ConfluentWaitHandle.cs" />
